# marimo-initial-learning

./: .gitignore  CHANGELOG-INDEX.yaml  CHANGELOG_2026-02-01.py  README  README.md  main.py  pyproject.toml
__marimo__/session/: CHANGELOG_2026-02-01.py.json
notebooks/__marimo__/session/: 001_hello_marimo.py.json
